# SecVerifier

./: .gitignore  Dockerfile  Makefile  REPO_INIT_FIX.md  Update_upload_cve_Dataset.ipynb  analyze_success_rates.py  config.template.toml  main.py  multi-agent.py  pyproject.toml  run_multi-agent.sh  single-agent.py  target.txt  tested.txt
containers/dev/: dev.sh
docker/: Dockerfile.base
docs/: .gitignore  llm-providers.md
openhands/cli/: main.py
openhands/controller/: agent_controller.py
openhands/core/: cli.py  loop.py  main.py  setup.py
openhands/core/config/: __init__.py  openhands_config.py  utils.py
openhands/integrations/vscode/: openhands-vscode-0.0.1.vsix
openhands/llm/: __init__.py  claude_code_llm.py  fn_call_converter.py  llm.py
openhands/memory/: conversation_memory.py  memory.py
openhands/microagent/: microagent.py
openhands/resolver/: issue_resolver.py  resolve_issue.py
openhands/runtime/: __init__.py  action_execution_server.py
openhands/runtime/utils/: command.py
openhands/utils/: shutdown_listener.py
output/: wasm3.cve-2022-28966.json
sec_bench_sdk/application/dto/: phase_data.py
sec_bench_sdk/application/services/: phase_executor.py  reproducer_orchestrator.py  (+1 more)
secb/evaluator/: build_eval_instances.py  eval_instances.py
secb/preprocessor/: build_base_images.py  build_instance_images.py  project.py
tests/runtime/: test_bash.py  test_ipython.py
tests/unit/: test_acompletion.py  test_agent_controller.py  test_agent_session.py  test_config.py  test_microagent_utils.py
workspace/_openhands_uv_shim/: pyproject.toml
(+7991 files in other folders)
