[project]
name = "sec-bench-sdk"
version = "2.0.0"
description = "Multi-agent security vulnerability reproduction system using OpenHands SDK"
requires-python = ">=3.12"
dependencies = [
    "openhands-sdk",  # Core SDK (openhands.sdk)
    "openhands-tools",  # Built-in tools (openhands.tools)
    "openhands>=1.0.0",
    "openhands-workspace>=0.1.0",  # Required for DockerWorkspace
    "openhands-agent-server>=0.1.0",  # Required by DockerWorkspace
    "playwright",  # Browser automation for web-based vulnerabilities
    "click>=8.1.0",
    "datasets>=2.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "black>=24.0.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["sec_bench_sdk"]

[tool.pytest.ini_options]
testpaths = ["sec_bench_sdk/tests"]
python_files = "test_*.py"
asyncio_mode = "auto"

[tool.black]
line-length = 100
target-version = ['py312']

[tool.ruff]
line-length = 100
target-version = "py312"
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
